--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5984,6 +5984,7 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  position: relative;
 }
 .screen-slider.orange {
   background-color: #BD7F40;
@@ -6004,6 +6005,19 @@ img {
   display: flex;
   gap: 30px;
 }
+.screen-slider .slider-container {
+  max-width: 1920px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 5;
+}
+.screen-slider .slider-navigation {
+  position: relative;
+  z-index: 6;
+}
 .screen-slider .slider-item-bg:nth-child(1) {
   border-radius: 0px 0px 80px 80px;
   background: #FFF8D9;
@@ -6017,16 +6031,91 @@ img {
 .screen-slider .slider-content {
   display: none;
 }
+.screen-slider .slider-content-title {
+  font-size: 80px;
+  font-size: 5rem;
+  font-weight: 700;
+  color: #FFF;
+  margin-bottom: 25px;
+}
+.screen-slider .slider-content-title span {
+  display: block;
+}
+.screen-slider .slider-content p {
+  font-size: 20px;
+  font-size: 1.25rem;
+  font-weight: 400;
+  font-family: "Inter";
+  min-height: 224px;
+}
+.screen-slider .slider-content-description {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 40px;
+  margin-bottom: 45px;
+}
+.screen-slider .slider-content-description__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.screen-slider .slider-content-description__wrapper .image {
+  position: relative;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  background-color: #FFF8D9;
+  margin-right: 16px;
+}
+.screen-slider .slider-content-description__wrapper .image img {
+  position: absolute;
+  top: -24%;
+  max-width: 85px;
+}
+.screen-slider .slider-content-description__wrapper .param {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.screen-slider .slider-content-description__wrapper .param span {
+  text-transform: uppercase;
+  font-size: 24px;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
 .screen-slider .slider-content.active {
   display: block;
 }
 .screen-slider .slider-left {
   width: 40%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 .screen-slider .slider-right {
-  width: 80%;
+  width: 58%;
   position: relative;
-  left: 11%;
+  left: 4%;
   max-height: 75vh;
 }
 .screen-slider .slider-right {
