--- a/src/sass/_ui.scss
+++ b/src/sass/_ui.scss
@@ -26,27 +26,36 @@ h1, h2, h3, h4, h5, h6,
 h1, .h1 {
 	@include fz($h1);
 	margin-top: 0;
-	line-height: 1;
+	line-height: 1.15;
 
-	@media (min-width: 1440px) {
-		@include fz(60);
+	// @media (min-width: 1440px) {
+	// 	@include fz(60);
+	// }
+
+	@media (max-width: 1680px) {
+		@include fz(86);
 	}
 
-	@media (max-width: 1259px) {
-		@include fz(54);
+	@media (max-width: 1366px) {
+		@include fz(70);
 	}
 
-	@media (max-width: 1259px) {
-		@include fz(46);
+	@media (max-width: 1140px) {
+		@include fz(56);
 	}
 
 	@media (max-width: 959px) {
-		@include fz(42);
+		@include fz(52);
+		line-height: 1.1;
+	}
+
+	@media (max-width: 768px) {
+		@include fz(54);
 		line-height: 1.1;
 	}
 
 	@media (max-width: 599px) {
-		@include fz(36);
+		@include fz(42);
 		line-height: 1.14;
 	}
 }
