--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -6,25 +6,162 @@
   overflow-x: hidden;
   overflow-y: auto;
   scroll-snap-type: y mandatory;
-  &.contest {
-    @media (max-width: 1024px) {
-      scroll-snap-type: unset;
-    }
+ 
+  @media (max-width: 1024px) {
+    scroll-snap-type: unset;
   }
 }
 .screen {
+  position: relative;
   scroll-snap-align: start;
+
+  .screen-slogan {
+    max-height: 24vh;
+    position: absolute;
+    right: 6vh;
+    top: 6vh;
+    @media (max-width: 768px) {
+      max-height: 18vh;
+      right: 4vh;
+      top: 40vh;
+    }
+    // @media (max-width: 599px) {
+    //   display: none;
+    // }
+  }
+
+  .screen-ticket {
+    position: absolute;
+    right: 6vh;
+    bottom: 8vh;
+    max-height: 22vh;
+    @media (max-width: 768px) {
+      max-height: 10vh;
+      right: 11vh;
+      bottom: unset;
+      top: 4px;
+    }
+  }
 }
 
 .screen-promo {
-  height: 100vh;
   max-height: 1366px;
   overflow: hidden;
   position: relative;
   z-index: 1;
   background-color: #538c57;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 170px;
+  padding-bottom: 70px;
+  min-height: 100vh;
 
-  &-content {    
+  @media (max-width: 1366px) {
+    padding-top: 124px;
+    padding-bottom: 36px;
+  }
+  @media (max-width: 1280px) {
+    padding-top: 100px;
+  }
+  @media (max-width: 1024px) {
+    flex-direction: column;
+    justify-content: center;
+    scroll-snap-align: unset;
+    min-height: unset;
+    padding-top: 150px;
+    padding-bottom: 10px;
+  }
+  // @media (max-width: 992px) {
+  //   padding-top: 86px;
+  // }
+  @media (max-width: 768px) {
+    padding-top: 110px;
+  }  
+
+  .container {
+    width: 100%;
+    &.mobile {
+      display: none;
+      @media (max-width: 768px) {
+        display: block;
+      }
+    }
+  }
+
+  .ticket {
+    position: absolute;
+    right: 0;
+    top: -140px;
+    padding-right: 52px;
+    top: unset;
+    right: 0px;
+    bottom: 80px;
+
+    @media (max-width: 1680px) {
+      max-height: 150px;
+      right: 0px;
+    }
+    @media (max-width: 1366px) {
+      max-height: 136px;      
+    }
+    // @media (max-width: 1140px) {
+    //   max-height: 110px;
+    //   top: 30px;
+    //   right: 30px;
+    //   // top: -114px;
+    // }
+    // @media (max-width: 992px) {
+    //   max-height: 80px;
+    //   // top: -100px;
+    // }
+    @media (max-width: 768px) {
+      max-height: 80px;
+      top: 17px;
+      right: 10vw;
+      z-index: 10;
+      // display: none;
+    }
+    // @media (max-width: 599px) {
+    //   top: 4px;
+    // }
+  }  
+
+  .bottle-wrapper {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: -1;
+    @media (max-width: 768px) {
+      // top: unset;
+      // bottom: 180px;
+      position: static;
+    }
+
+    .row {
+      @media (max-width: 1024px) {
+        justify-content: flex-end;
+      }
+    }
+
+    img {
+      height: 100vh;
+      display: block;
+      margin-left: auto;
+      @media (max-width: 1024px) {
+        height: 86%;
+        margin-left: 0;
+      }
+      @media (max-width: 768px) {
+        object-fit: contain;
+        height: 60vh;
+        margin-left: auto;
+        margin-right: auto;
+      }
+    }
+  }
+
+  &-content {
     max-width: 358px;
     display: flex;
     flex-direction: column;
@@ -49,15 +186,35 @@
   }
 
   &-btn {
-    margin: 0 auto;
-    @media (max-width: 768px) {      
-      position: absolute;
-      bottom: 40px;      
-      z-index: 3;
-      left: 50%;
-      transform: translate(-50%, 0);
+    &.desktop {
+      @media (max-width: 768px) {
+        display: none;
+      }
     }
-  } 
+    &.mobile {
+      display: none;
+      margin: 0 auto;
+      position: static;      
+      @media (max-width: 768px) {
+        display: block;    
+        @include fz(22);    
+        padding: 0px 60px;
+        height: 71px;
+	      line-height: 71px;
+        box-shadow: 14px 14px 0px #5E6738;
+        margin-top: -30px;
+        margin-bottom: 12px;
+        width: 80%;
+      }
+    }
+    // @media (max-width: 768px) {
+    //   position: absolute;
+    //   bottom: 130px;
+    //   z-index: 3;
+    //   left: 50%;
+    //   transform: translate(-50%, 0);
+    // }
+  }
 
   &-bg {
     position: absolute;
@@ -96,16 +253,16 @@
   @media (max-width: 1180px) {
     &-content {
       max-width: 200px;
-    }   
+    }
   }
 
   @media (max-width: 992px) {
-    height: calc(var(--vh, 1vh) * 100);
+    // height: calc(var(--vh, 1vh) * 100);
 
     &-content {
       max-width: 275px;
     }
-  
+
     &-bottles {
       right: -5%;
       max-height: 80%;
@@ -119,7 +276,7 @@
       left: -5%;
       right: -10%;
       max-width: 115%;
-    }  
+    }
   }
   @media (max-width: 768px) {
 
@@ -133,36 +290,36 @@
       text-align: center;
       margin-top: 65vh;
     }
-    &-slogan { 
+    &-slogan {
       top: 30px;
       right: 30px;
       position: absolute;
       z-index: 2;
 
-      &-mobile {        
+      &-mobile {
         visibility: visible;
         display: block;
         @include fz(42);
         line-height: 1.2;
         color: $font;
-        position: absolute;  
+        position: absolute;
         img {
           max-width: 46%;
           display: block;
           margin-left: auto;
         }
-      }    
-    }   
+      }
+    }
     &-bottles {
       top: 50%;
       right: unset;
       left: 50%;
       transform: translate(-50%, -50%);
-    }   
+    }
   }
-  @media (max-width: 390px) {
-    min-height: 550px;
-  }
+  // @media (max-width: 390px) {
+  //   min-height: 550px;
+  // }
 }
 
 .screen-benefits {
@@ -868,12 +1025,12 @@
 }
 
 .screen-promo-left {
-  height: 100vh;
+  height: 100%;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   flex-direction: column;
-  padding: 30px 0px 80px;
+  // padding: 30px 0px 80px;
 
   @media (max-width: 1600px) {
     padding: 20px 0px 60px;
@@ -889,12 +1046,69 @@
   }
 
   .screen-promo-btn {
-    @media (max-width: 768px) {
-      display: none;
-      visibility: hidden;
-    }
+    // @media (max-width: 768px) {
+    //   display: none;
+    //   visibility: hidden;
+    // }
     @media (max-width: 992px) and (min-width: 768px) {
       margin: 0;
+    }
+  }
+
+  .promo-text {
+    max-width: 682px;
+    @media (max-width: 1680px) {
+      max-width: 510px;
+    }
+    @media (max-width: 1366px) {
+      max-width: 422px;
+    }
+    // @media (max-width: 1140px) {
+    //   max-width: 310px;
+    // }
+    @media (max-width: 768px) {
+      max-width: 100%;
+    }
+    &-title {
+      text-transform: uppercase;
+      font-weight: 700;
+      margin-bottom: 24px;
+      @media (max-width: 1366px) {
+        margin-bottom: 20px;
+      }
+      @media (max-width: 1140px) {
+        margin-bottom: 25px;
+      }
+      @media (max-width: 768px) {
+        margin-bottom: 0;
+      }
+
+    }
+    &-question {
+      font-family: $inter;
+      font-weight: 400;
+      @include fz(20);
+      margin-bottom: 60px;
+
+      @media (max-width: 1680px) {
+        @include fz(18);
+        margin-bottom: 56px;
+      }
+      @media (max-width: 1366px) {
+        @include fz(16);
+        margin-bottom: 46px;
+      }
+      // @media (max-width: 1140px) {
+      //   @include fz(11);
+      //   margin-bottom: 38px;
+      // }
+      @media (max-width: 768px) {
+        @include fz(18);
+        margin-bottom: 38px;
+      }
+      @media (max-width: 599px) {
+        display: none;
+      }
     }
   }
 }
@@ -915,12 +1129,14 @@
 }
 
 .screen-promo-bottle {
-  height: 100vh;
+  position: absolute;
+  // height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 60px 0px;
+  // padding: 60px 0px;
+  margin-top: -170px;
 
   @media (max-width: 1600px) {
     padding: 50px 0px;
@@ -958,7 +1174,7 @@
 
 
 .screen-promo-bottle img {
-  max-height: calc(100vh - 120px);
+  max-height: calc(100vh - 10px);
   @media (max-width: 1600px) {
     max-height: calc(100vh - 100px);
   }
@@ -970,7 +1186,7 @@
   }
 }
 
-.screen-promo-logo {  
+.screen-promo-logo {
   text-align: center;
 }
 
